# qt-learn

./: .gitignore  CMakeLists.txt  Qt课程安排.txt  README.md  main.cc
day0/: CMakeLists.txt
day1/: CMakeLists.txt
day1/01_first_project/: CMakeLists.txt  MyPushButton.cc  MyPushButton.h  MyWidget.cc  MyWidget.h  main.cc
day1/02_signal_and_slot/: CMakeLists.txt  main.cc  student.cc  student.h  teacher.cc  teacher.h  widget.cc  widget.h  widget.ui
day1/exercise/: CMakeLists.txt  README.md  widget.cpp  widget.h
day1/note/: .pro文件解释.txt
day2/: CMakeLists.txt
day2/01_QMainWindow/: CMakeLists.txt  main.cc  main_window.cpp  main_window.h
day2/02_QtSource/: CMakeLists.txt  main_window.cpp  main_window.ui
day2/03_QDialog/: CMakeLists.txt  main_window.cc  main_window.ui
day2/04_Layout/: CMakeLists.txt  main.cc  main_window.cc  main_window.h  main_window.ui
day2/05_Qt_Control/: CMakeLists.txt  widget.cpp  widget.ui
day2/06_TreeWidget/: CMakeLists.txt  widget.cpp  widget.h  widget.ui
day2/07_TableWidget/: CMakeLists.txt  main.cc  widget.cpp  widget.ui
day2/08_OtherControl/: CMakeLists.txt  widget.cpp  widget.ui
day2/note/: 英雄介绍.txt
day3/: CMakeLists.txt
day3/01_SmallWidget/: CMakeLists.txt  smallwidget.cpp  smallwidget.h  smallwidget.ui  widget.cpp  widget.h  widget.ui
day3/02_QtEvent/: CMakeLists.txt  my_label.cpp  my_label.h  widget.cpp  widget.h  widget.ui
day3/03_QPainter/: CMakeLists.txt  widget.cpp  widget.h  widget.ui
day3/04_QtPaintDevice/: CMakeLists.txt  widget.cpp  widget.h  widget.ui
day3/05_Qt_QFile/: CMakeLists.txt  widget.cpp  widget.h  widget.ui
day4/: CMakeLists.txt  chooselevelscene.h  mainscene.cc  mainscene.ui  play_scene.h
day5/: CMakeLists.txt  chooselevelscene.cc  chooselevelscene.h  config.cc  config.h  dataconfig.cc  dataconfig.h  main.cc  mainscene.cc  mainscene.h  my_coin.cc  my_coin.h  mypushbutton.cc  mypushbutton.h  play_scene.cc  play_scene.h  res.qrc
model/: CMakeLists.txt  consts.h  game_model.cc  game_model.h  mine_block.h
view_model/: CMakeLists.txt  main_game_window.cc  main_game_window.h  main_game_window.ui  resources.qrc
